// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Elements/Accordion Default 1`] = `
<div
  className="undefined rounded-lg border-2 border-neutral-100 shadow"
  data-headlessui-state=""
>
  <button
    aria-expanded={false}
    className="flex w-full items-center justify-between px-15 py-9"
    data-headlessui-state=""
    id="headlessui-disclosure-button-:r0:"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <p
      className="text-left text-heading-700"
      data-testid="txt"
    >
      Accordion Title
    </p>
    <div
      className="flex items-center space-x-6"
    >
      <div
        style={
          Object {
            "height": undefined,
            "width": 16,
          }
        }
      />
    </div>
  </button>
</div>
`;

exports[`Storyshots Components/Elements/Accordion Secondary 1`] = `
<div
  className="undefined rounded-lg border-2 border-neutral-100 shadow"
  data-headlessui-state=""
>
  <button
    aria-expanded={false}
    className="flex w-full items-center justify-between p-6 "
    data-headlessui-state=""
    id="headlessui-disclosure-button-:r2:"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <p
      className="text-left text-heading-500"
      data-testid="txt"
    >
      Accordion Title
    </p>
    <div
      className="flex items-center space-x-6"
    >
      <div
        style={
          Object {
            "height": undefined,
            "width": 16,
          }
        }
      />
    </div>
  </button>
</div>
`;

exports[`Storyshots Components/Elements/Accordion With CTA 1`] = `
<div
  className="undefined rounded-lg border-2 border-neutral-100 shadow"
  data-headlessui-state=""
>
  <button
    aria-expanded={false}
    className="flex w-full items-center justify-between px-15 py-9"
    data-headlessui-state=""
    id="headlessui-disclosure-button-:r4:"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <p
      className="text-left text-heading-700"
      data-testid="txt"
    >
      Accordion Title
    </p>
    <div
      className="flex items-center space-x-6"
    >
      <p
        className="cursor-pointer underline text-body-600"
        data-testid="txt"
        onClick={[Function]}
        role="button"
      >
        Edit
      </p>
      <div
        style={
          Object {
            "height": undefined,
            "width": 16,
          }
        }
      />
    </div>
  </button>
</div>
`;
